tests/machine/x/cobol/if_then_else_nested.cob
*> Generated by Mochi compiler v0.10.27 on 2025-07-17T11:45:37Z
>>SOURCE FORMAT FREE
       IDENTIFICATION DIVISION.
       PROGRAM-ID. IF-THEN-ELSE-NESTED.
       DATA DIVISION.
       WORKING-STORAGE SECTION.
       01 X PIC 9 VALUE 8.
       01 MSG PIC X.
       01 TMP PIC S9(9) VALUE 0.
       01 TMP-STR PIC Z(18).
       PROCEDURE DIVISION.
       IF X > 10
           COMPUTE TMP = "big"
       ELSE
           IF X > 5
               COMPUTE TMP = "medium"
           ELSE
               COMPUTE TMP = "small"
           END-IF
       END-IF
       COMPUTE MSG = TMP
       DISPLAY MSG
       STOP RUN.
